# ai-chat-tui

./: .gitignore  CLAUDE.md  README.md  api_handler.py  chat_log_manager.py  chat_manager.py  chat_tree.py  chat_tree_handler.py  chat_tree_store.py  config.toml  config.toml.example  main.py  pyproject.toml  role.py
.github/workflows/: ci.yml
application/: attachments.py  chat_session.py  thread_entry.py
docs/design/: data-layer.md  project-structure.md  testing.md  ui-layer.md
domain/: chat_tree.py  node.py  role.py
infrastructure/: api_handler.py  calculator.py  chat_tree_store.py  current_datetime.py  memory_store.py  tool_registry.py  web_fetch.py  web_search.py
tcss/: chat_app.tcss  edit_user_message_window.tcss  thread_select_window.tcss  tree_select_window.tcss
tests/: conftest.py  test_api_handler.py  test_attachments.py  test_calculator.py  test_chat_app_e2e.py  test_chat_session.py  test_chat_tree.py  test_chat_tree_store.py  test_chat_view.py  test_current_datetime.py  test_highlight.py  test_memory_store.py  test_overlay_size.py  test_tool_registry.py  test_web_fetch.py
ui/: chat_app.py  chat_view.py  help_overlay.py  highlight.py  model_select_overlay.py  overlay_size.py  system_prompt_overlay.py  thread.py  thread_select_window.py  thread_view.py  tree_select_overlay.py  tree_select_window.py
util/: util.py
