[project]
name = "ai-chat-tui"
version = "0.1.0"
description = "Branching AI chat TUI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.60.1",
    "prompt-toolkit>=3.0.0",
    "python-dotenv>=1.0.0",
    "pygments>=2.0.0",
    "pyperclip>=1.8.0",
    "ddgs>=9.0.0",
    "trafilatura>=1.12.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
